[build-system]
requires = ["setuptools", "setuptools-scm[toml]>=6.2.3",]
build-backend = "setuptools.build_meta"

[project]
name = "socon"
description = "A high-level Python framework that enables you to develop a generic, robust and reliable framework for your different projects."
authors = [
    {name = "Stephane Capponi", email = "stephane.capponi@gmail.com"}
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
keywords = [
    "projects",
    "socon",
    "scripts",
    "commands",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "readme"]

[project.scripts]
socon = "socon.core.management:execute_from_command_line"

[project.urls]
homepage = "https://socon.readthedocs.io/en/latest/"
repository = "https://github.com/socon-dev/socon"
changelog = "https://github.com/socon-dev/socon/blob/master/docs/internals/changelog.txt"

[tool.setuptools]
packages = ["socon"]

[tool.setuptools.dynamic]
version = {attr = "socon.__version__"}
readme = {file = ["README.rst"]}

[tool.towncrier]
package = "socon"
package_dir = "socon"
filename = "docs/internals/changelog.txt"
directory = "changelog/"
title_format = "socon {version} ({project_date})"
template = "changelog/_template.rst"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecation"
    name = "Deprecations"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "improvement"
    name = "Improvements"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Improved Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "trivial"
    name = "Trivial/Internal Changes"
    showcontent = true
